objects/OUV_Frequent_Drivers__c.object
<CustomObject>
    <label>OUV Frequent Driver</label>
    <nameField>
        <label>OUV Frequent Drivers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OUV Frequent Drivers</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>OUV_Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OUV_Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fiscal_Code__c</fullName>
        <label>Fiscal Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_of_Birth__c</fullName>
        <label>City of Birth</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_3__c</fullName>
        <label>Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Insured_By__c</fullName>
        <label>Insured By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OUV_Insured_By</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Occupation__c</fullName>
        <label>Occupation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Vehicle_Storage__c</fullName>
        <label>Vehicle Storage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OUV_Country_of_issue__c</fullName>
        <label>Country of issue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Insurance_Company__c</fullName>
        <label>Insurance Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Company_Department__c</fullName>
        <label>Company / Department</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OUV_Driving_Experience__c</fullName>
        <label>Driving Experience</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OUV_Licence_Start_Date__c</fullName>
        <label>Licence Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Passport_ID_number__c</fullName>
        <label>Passport / ID number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Licence_Expiry_Date__c</fullName>
        <label>Licence Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Driver_License_Number__c</fullName>
        <label>Driver License Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Insurance_policy_number__c</fullName>
        <label>Insurance policy number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>